{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 11,
  "lineage": "7018230e-d91d-29d0-0d75-66d4598ce65d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "splunk_vpc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:835529065704:internet-gateway/igw-07aa0b53cfae3c848",
            "id": "igw-07aa0b53cfae3c848",
            "owner_id": "835529065704",
            "tags": {
              "Name": "internet-gate"
            },
            "tags_all": {
              "Name": "internet-gate"
            },
            "vpc_id": "vpc-08499202a555f004a"
          },
          "dependencies": [
            "aws_vpc.splunk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pubic_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:835529065704:route-table/rtb-04ba44cc56bb89666",
            "id": "rtb-04ba44cc56bb89666",
            "owner_id": "835529065704",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07aa0b53cfae3c848",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "tags_all": {
              "Name": "public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-08499202a555f004a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.splunk_vpc_igw",
            "aws_vpc.splunk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "splunk_rt_tbl_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c4316a45b696af2",
            "route_table_id": "rtb-04ba44cc56bb89666",
            "subnet_id": "subnet-0f2818db57e54e2a0"
          },
          "dependencies": [
            "aws_internet_gateway.splunk_vpc_igw",
            "aws_route_table.pubic_rt",
            "aws_subnet.splunk_subnet_1",
            "aws_vpc.splunk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "splunk_rt_tbl_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b6a0d66e477a3d82",
            "route_table_id": "rtb-04ba44cc56bb89666",
            "subnet_id": "subnet-02533cd4fa6e27c0e"
          },
          "dependencies": [
            "aws_internet_gateway.splunk_vpc_igw",
            "aws_route_table.pubic_rt",
            "aws_subnet.splunk_subnet_2",
            "aws_vpc.splunk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:835529065704:security-group/sg-06e05db54bf410109",
            "description": "allow SSH inbound connections",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06e05db54bf410109",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_sg",
            "name_prefix": "",
            "owner_id": "835529065704",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow ssh sg"
            },
            "tags_all": {
              "Name": "allow ssh sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08499202a555f004a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.splunk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:835529065704:security-group/sg-0916798ba26415788",
            "description": "Allow HTTP inbound connections",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0916798ba26415788",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http_sg",
            "name_prefix": "",
            "owner_id": "835529065704",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_Http_sg"
            },
            "tags_all": {
              "Name": "allow_Http_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08499202a555f004a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.splunk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "splunk_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:835529065704:subnet/subnet-0f2818db57e54e2a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2818db57e54e2a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "835529065704",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_1",
              "key": "Public Subnet"
            },
            "tags_all": {
              "Name": "subnet_1",
              "key": "Public Subnet"
            },
            "vpc_id": "vpc-08499202a555f004a"
          },
          "dependencies": [
            "aws_vpc.splunk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "splunk_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:835529065704:subnet/subnet-02533cd4fa6e27c0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02533cd4fa6e27c0e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "835529065704",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_2",
              "key": "Public Subnet"
            },
            "tags_all": {
              "Name": "subnet_2",
              "key": "Public Subnet"
            },
            "vpc_id": "vpc-08499202a555f004a"
          },
          "dependencies": [
            "aws_vpc.splunk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "splunk_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:835529065704:vpc/vpc-08499202a555f004a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0df2ecb7cd6b5c81e",
            "default_route_table_id": "rtb-0197488f627e2838f",
            "default_security_group_id": "sg-000a5a6fdb4a1c505",
            "dhcp_options_id": "dopt-04a3fa2a0f98ff344",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08499202a555f004a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0197488f627e2838f",
            "owner_id": "835529065704",
            "tags": {
              "Name": "splunk_vpc"
            },
            "tags_all": {
              "Name": "splunk_vpc"
            }
          }
        }
      ]
    }
  ]
}